--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="close_drawer">close_drawer</string>
     <string name="app_id">306749319960420</string>
     <string name="fb_login_protocol_scheme">fb204127990172423</string>
+    <string name="txt_DealOfDay">Deal of the Day</string>
 </resources>
