--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="txt_DealOfDay">Deal of the Day</string>
     <string name="txt_ListProducts">List of the Products</string>
     <string name="txt_Recommended">Recommended for you</string>
+    <string name="Rs">\u20B9</string>
 </resources>
